# Copyright 2020 IOTA Stiftung
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "gascalibration/memory",
    "gascalibration/storage",
    "gascalibration/executiontime",
    "gascalibration/hash",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
